--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,16 @@
         </header>
         <main>
             <section>
+                <section id="disclaimer">
+                    <h2>Disclaimer </h2>
+                    <p>This game is meant for people ages 13+. It is not a game meant for people experiencing depression or suicide. All characters in this game are fictional and is meant to only be a front to how this game of hangman can play out. If you are experiencing any form of depression or thoughts of suicide, please contact a help line.</p>
+                </section>
                 <div><p>Try to guess the word</p></div>
+
+                <figure>
+                    <img src="../pictures/mistake_00.png" alt="background" id="picture">
+                </figure>
+
                 <p id="hint"></p>
                 <p id="underscore">underscore</p>
                 <div id="keyboard"></div>
