final final final

--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,6 @@
+<!--
+    link to github https://github.com/Calvinyuuu/final-project
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +20,7 @@
 
         <main>
             <section>
-                
+
                 <section id="disclaimer" class="disclaimer">
                     <h2>Disclaimer </h2>
                     
